--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -4,7 +4,7 @@
     -ms-flex-align: center;
     align-items: center;
     padding: .256em 0em;
-    background-color: #000;
+    background-color: $white;
 }
 }
 @media screen and (min-width: 44.375em){
