--- a/css/app.css
+++ b/css/app.css
@@ -43,7 +43,7 @@ section {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-.clearfix:after, .row:after, #mega-footer:after, #mega-footer ul:after, .sponsors:after {
+.clearfix:after, .row:after, #mega-footer:after, #mega-footer ul:after, .join:after, .sponsors:after, #primary .board--members li:after {
   visibility: hidden;
   display: block;
   font-size: 0;
@@ -51,15 +51,18 @@ section {
   clear: both;
   height: 0; }
 
-* html .clearfix, * html .row, * html #mega-footer, * html #mega-footer ul, #mega-footer * html ul, * html .sponsors {
+* html .clearfix, * html .row, * html #mega-footer, * html #mega-footer ul, #mega-footer * html ul, * html .join, * html .sponsors, * html #primary .board--members li, #primary .board--members * html li {
   zoom: 1; }
 
 /* IE6 */
-*:first-child + html .clearfix, *:first-child + html .row, *:first-child + html #mega-footer, *:first-child + html #mega-footer ul, #mega-footer *:first-child + html ul, *:first-child + html .sponsors {
+*:first-child + html .clearfix, *:first-child + html .row, *:first-child + html #mega-footer, *:first-child + html #mega-footer ul, #mega-footer *:first-child + html ul, *:first-child + html .join, *:first-child + html .sponsors, *:first-child + html #primary .board--members li, #primary .board--members *:first-child + html li {
   zoom: 1; }
 
 /* IE7 */
-.spacing, .mission-statement, .community, .sponsors h2 {
+a {
+  color: #ed1c24; }
+
+.spacing, .mission-statement, .community, .join, .sponsors h2 {
   margin-bottom: 40px;
   padding-top: 40px; }
 
@@ -72,6 +75,9 @@ h1, h2, h3, h4, h5, h6 {
 h1, h2 {
   font-weight: normal; }
 
+.site-header-main a {
+  color: #ed1c24; }
+
 #site-navigation #menu-main li a, #site-navigation #menu-main li.menu-item a, #site-navigation ul li a, #site-navigation ul li.menu-item a {
   text-decoration: none;
   color: #FFF;
@@ -79,19 +85,29 @@ h1, h2 {
   text-transform: capitalize; }
 
 #site-navigation #menu-main li.menu-item-has-children ul, #site-navigation #menu-main li.menu-item.menu-item-has-children ul, #site-navigation ul li.menu-item-has-children ul, #site-navigation ul li.menu-item.menu-item-has-children ul {
-  background-color: #000; }
+  background-color: #FFF; }
   #site-navigation #menu-main li.menu-item-has-children ul li, #site-navigation #menu-main li.menu-item.menu-item-has-children ul li, #site-navigation ul li.menu-item-has-children ul li, #site-navigation ul li.menu-item.menu-item-has-children ul li {
     color: #FFF;
     background-color: inherit; }
 
 #masthead {
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  background-color: #FFF;
+  border-bottom: 2px solid #ed1c24; }
+  #masthead #site-header-menu #site-navigation .menu-item a {
+    color: #ed1c24; }
   #masthead .header--search-form input {
     display: none; }
 
 .site-branding {
   margin-right: 8% !important;
   margin-top: 1.1rem !important; }
+  @media only screen and (max-width: 767px) {
+    .site-branding {
+      margin-right: auto !important; } }
+  @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .site-branding {
+      margin-right: auto !important; } }
 
 #social-navigation {
   display: block;
@@ -164,7 +180,7 @@ aside {
       margin-left: 0%;
       margin-right: 3%;
       list-style: none;
-      border-right: 1px solid #1c1c1c;
+      border-right: 1px solid #ccc;
       height: 182px; }
       #mega-footer ul li.mega-item::after {
         content: '';
@@ -288,12 +304,77 @@ aside {
     left: 0;
     text-align: center;
     padding: .556em 0;
-    background-color: rgba(255, 255, 255, 0.5); }
+    background-color: rgba(255, 255, 255, 0.75); }
     .community .community-item h2 a {
       color: #ed1c24; }
 
+.join .join--item {
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 48.5%;
+  margin-left: 0%;
+  margin-right: 3%;
+  text-align: center; }
+  .join .join--item::after {
+    content: '';
+    display: table;
+    clear: both; }
+  .join .join--item:last-child {
+    margin-right: 0%; }
+  .join .join--item h2 {
+    text-align: center; }
+  .join .join--item .join--us {
+    margin-top: 60px; }
+    .join .join--item .join--us a {
+      display: inline-block;
+      padding: .9rem 1.222rem;
+      color: #FFF;
+      background-color: #ed1c24;
+      font-size: 1.166rem; }
+  @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .join .join--item {
+      float: left;
+      clear: none;
+      text-align: inherit;
+      width: 48.5%;
+      margin-left: 0%;
+      margin-right: 3%; }
+      .join .join--item::after {
+        content: '';
+        display: table;
+        clear: both; }
+      .join .join--item:last-child {
+        margin-right: 0%; } }
+  @media only screen and (max-width: 767px) {
+    .join .join--item {
+      float: left;
+      clear: none;
+      text-align: inherit;
+      width: 100%;
+      margin-left: 0%;
+      margin-right: 3%; }
+      .join .join--item::after {
+        content: '';
+        display: table;
+        clear: both; }
+      .join .join--item:last-child {
+        margin-right: 0%; } }
+
 .sponsors {
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+  width: auto;
+  max-width: 65%;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0; }
+  .sponsors::after {
+    content: '';
+    display: table;
+    clear: both; }
   .sponsors h2 {
     text-align: center; }
   .sponsors ul {
@@ -313,9 +394,38 @@ aside {
         clear: both; }
       .sponsors ul li:last-child {
         margin-right: 0%; }
+      @media only screen and (max-width: 767px) {
+        .sponsors ul li {
+          float: left;
+          clear: none;
+          text-align: inherit;
+          width: 48.5%;
+          margin-left: 0%;
+          margin-right: 3%; }
+          .sponsors ul li::after {
+            content: '';
+            display: table;
+            clear: both; }
+          .sponsors ul li:last-child {
+            margin-right: 0%; } }
       .sponsors ul li img {
         max-width: 100%;
         height: auto; }
+
+.page-title {
+  margin: 0 0 60px 0; }
+
+#primary .board--members {
+  margin: 0;
+  padding: 0; }
+  #primary .board--members li {
+    list-style: none;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px dotted #ccc; }
+    #primary .board--members li img {
+      float: left;
+      padding-right: 10px; }
 
 .home_slider .container .main-slides {
   float: left;
@@ -453,7 +563,7 @@ aside {
     left: 0;
     width: 100%;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.5); }
+    background-color: rgba(255, 255, 255, 0.75); }
 
 .flex-direction-nav a:before {
   font-size: 32px;
@@ -466,7 +576,7 @@ aside {
     -ms-flex-align: center;
     align-items: center;
     padding: .256em 0em;
-    background-color: #000; } }
+    background-color: #FFF; } }
 
 @media screen and (min-width: 44.375em) {
   body:not(.custom-background-image):before, body:not(.custom-background-image):after {
