--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,11 +35,24 @@
         content: '';
     }
     .menu-item{
+        background-image: url("../images/social-media-logos/instagram.svg");
+        background-repeat: no-repeat;
+        background-size: 75%;
+        &:hover{
+            @include opacity(.6);
+        }
         &:first-child{
             background-image: url("../images/social-media-logos/facebook.svg");
-            background-repeat: no-repeat;
-            background-size: 80%;
         }
+        &:last-child{
+            background-image: url("../images/social-media-logos/twitter.svg");
+        }
+        a{
+            border: none !important;
+            width: 32px;
+            height: 32px;
+        }
+
     }
 }
 ///MAIN CONTENT
@@ -64,6 +77,7 @@ aside{
 }
 .site-footer{
     padding-bottom: 0.5em;
+    margin-top: 40px;
 }
 .site-footer .site-title:after{
     content: none !important;
@@ -80,7 +94,7 @@ aside{
         margin: 0;
         padding: 0;
         @extend .clearfix;
-        
+
          li.mega-item{
             @include column(4/12);
             list-style: none;
@@ -93,10 +107,10 @@ aside{
                 float: none;
                 height: auto !important;
                 margin-bottom: 10px;
-                padding-top: 10px;
+                padding-bottom: 25px;
                 border-bottom: 1px solid $primary_color;
                 min-width: 100%;
-                padding: 0 30px;
+                padding: 15px 30px;
             }
             &:first-child{
                 @include column(2/12);
@@ -173,9 +187,9 @@ aside{
         text-align: center;
         h2{
             text-align: center;
+            margin-bottom: 60px;
         }
         .join--us{
-            margin-top: 60px;
             a{
                 display: inline-block;
                 padding: .9rem 1.222rem;
@@ -189,6 +203,17 @@ aside{
         }
         @include screen('mobile'){
             @include column(6/6);
+        }
+        .subscribe--form{
+            form{
+                input{
+                    margin-bottom: 30px;
+                    &[type="email"]{
+                        width: 80%;
+                        margin: 30px auto;
+                    }
+                }
+            }
         }
     }
 }
@@ -222,6 +247,10 @@ aside{
 }
 /////BOAR PAGE
 #primary{
+    .page-title{
+        font-size: 3em;
+        text-transform: capitalize;
+    }
     .board--members{
         margin: 0;
         padding: 0;
@@ -233,7 +262,19 @@ aside{
             @extend .clearfix;
             img{
                 float: left;
-                padding-right: 10px;
+                padding-right: 15px;
+            }
+            h2{
+              margin-bottom: 5px;
+              display: inline-flex;
+              clear: right;
+            }
+            em{
+                display: inline-block;
+                @include opacity(.7);
+            }
+            p{
+                margin: 10px 0 0 0;
             }
         }
     }
