--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -11,6 +11,7 @@
                 color: $white;
                 letter-spacing: 2px;
                 text-transform: capitalize;
+                @include transition(all .4s);
             }
             &.menu-item-has-children{
                 ul{
@@ -18,6 +19,7 @@
                     li{
                         color: $white;
                         background-color: inherit;
+                        @include transition(all .4s);
                     }
                 }
             }
