--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,4 +7,10 @@
 @import 'layout';
 @import 'slider';
 @import 'responsive';
-@import '/partials/*';
+@import 'partials/header';
+@import 'partials/footer';
+@import 'partials/home';
+@import 'partials/about';
+@import 'partials/cat';
+@import 'partials/join';
+
