--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -2,7 +2,8 @@
   .flexslider{
     .flex-caption{
       h2{
-        font-size: 12px;
+        font-size: 1.5rem;
+        color: red;
       }
     }
   }
