--- a/sass/partials/_community.scss
+++ b/sass/partials/_community.scss
@@ -10,10 +10,14 @@
       h2{
         padding: 0;
         margin-bottom: 30px;
+        font-size: 1.7rem;
       }
       footer{
         font-size: 12px;
         padding: 10px 0;
+      }
+      .post-image{
+        margin-bottom: 20px;
       }
     }
 
