--- a/sass/app.scss
+++ b/sass/app.scss
@@ -13,5 +13,5 @@
 @import 'partials/about';
 @import 'partials/cat';
 @import 'partials/join';
-
+@import 'partials/events';
 @import 'partials/community';
